--- a/views/pages/flashcardAppCreateNewSet.ejs
+++ b/views/pages/flashcardAppCreateNewSet.ejs
@@ -9,29 +9,31 @@
 		<script type="module" src="sampleData.js" async> </script>
 	<!-- <script type="module" src="ajaxDoc.js" async> </script> -->
 	</head>
-	<body>
-		<header class="headerActivityPage">
-			<div class="nameOfSite">
-				<a class="nameOfSite-a" href="/flashHome"> 
-					<h1 class="nameOfSite-h1"> Flashcard App </h1>		
-				</a>
-			</div>
-			<div class="newSets-navBar">
-				<div class="createNewSet">
-					<a class="createNewSet-a" href="/flashCreate"> 
-						<button class="dropbtn"> <i class="far fa-plus-square"></i>
-						</button>
-					</a>
-				</div>
-				<div class="sideNavBar">
-					<a class="sideNavBar-a" href="">
-						<button class="dropbtn"> <i class="fas fa-bars"></i> 
-						</button>
-					</a>
-				</div>
-			</div>
-		</header>	
+	<body>	
 		<div class="container-1">
+			<header class="headerActivityPage-home">
+				<div class="header">
+					<div class="nameOfSite">
+						<a class="nameOfSite-a" href="/flashHome"> 
+							<h1 class="nameOfSite-h1"> FlashPass </h1>
+						</a>
+					</div>
+					<div class="newSets-navBar">
+						<div class="createNewSet">
+							<a class="createNewSet-a" href="/flashCreate"> 
+								<button class="dropbtn"> 
+									<i class="far fa-plus-square"></i>
+								</button>
+							</a>
+						</div>
+						<div class="sideNavBar">
+							<a class="sideNavBar-a" href="">
+								<button class="dropbtn"> <i class="fas fa-bars"></i> </button>
+							</a>
+						</div>
+					</div>
+				</div>
+			</header>
 			<div class="createNewSet-outer">
 				<div class="createNewSets-Div">
 					<h2 class="createNewSetsDiv-h2"> Create your new set  </h2>
