--- a/views/pages/flashcardAppIndex.ejs
+++ b/views/pages/flashcardAppIndex.ejs
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1"/>
-		<title> Index </title>
+		<title> Profile </title>
 		<link type="text/css" rel="stylesheet" href="/stylesheets/flashcardApp.css">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
 
@@ -19,30 +19,33 @@
 		</script>
 	</head>
 	<body>
-		<header class="headerActivityPage">
-			<div class="nameOfSite">
-				<a class="nameOfSite-a" href="/flashHome"> 
-					<h1 class="nameOfSite-h1"> Flashcard App </h1>
-				</a>
-			</div>
-			<div class="newSets-navBar">
-				<div class="createNewSet">
-					<a class="createNewSet-a" href="/flashCreate"> 
-						<button class="dropbtn"> <i class="far fa-plus-square"></i>
-						</button>
-					</a>
-				</div>
-				<div class="sideNavBar">
-					<a class="sideNavBar-a" href="">
-						<button class="dropbtn"> <i class="fas fa-bars"></i> </button>
-					</a>
-				</div>
-			</div>
-		</header>	
 		<div class="container-1">
+			<header class="headerActivityPage-home">
+				<div class="header">
+					<div class="nameOfSite">
+						<a class="nameOfSite-a" href="/flashHome"> 
+							<h1 class="nameOfSite-h1"> FlashPass </h1>
+						</a>
+					</div>
+					<div class="newSets-navBar">
+						<div class="createNewSet">
+							<a class="createNewSet-a" href="/flashCreate"> 
+								<button class="dropbtn"> 
+									<i class="far fa-plus-square"></i>
+								</button>
+							</a>
+						</div>
+						<div class="sideNavBar">
+							<a class="sideNavBar-a" href="">
+								<button class="dropbtn"> <i class="fas fa-bars"></i> </button>
+							</a>
+						</div>
+					</div>
+				</div>
+			</header>
 			<div class="searchSets-outer">
 				<div class="searchSetsDiv">
-					<h2 class="searchSetsDiv-h2"> All of your sets </h2>
+					<h2 class="searchSetsDiv-h2"> Current sets </h2>
 					<div class="searchBar-inDiv">
 						<input class="searchBar-Input" type="text" placeholder="Search all your sets by title"/>
 					</div>
