Created 'Your Sets/Settings/Logout' options in slide in menu

--- a/views/pages/flashcardAppCreateNewSet.ejs
+++ b/views/pages/flashcardAppCreateNewSet.ejs
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta name="viewport" content="width=device-width, initial-scale=1"/>
+		<meta name="viewport" content="width=device-width, user-scalable=1"/>
 		<title> Create New Set </title>
 		<link type="text/css" rel="stylesheet" href="/stylesheets/flashcardApp.css">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
 		<script type="module" src="flashcardCreateNewSet.js" async> </script>
 		<script type="module" src="sampleData.js" async> </script>
+		<script src="events-newSet.js" async> </script>
+		<script src="newSet-menu.js" async> </script>
 	<!-- <script type="module" src="ajaxDoc.js" async> </script> -->
 	</head>
 	<body>	
+		<div class="dropbtn-menu">
+			<ul class="dbtn-menu-list">
+				<a href="/flashHome"> <li> Your Sets </li> </a>
+				<a href=""> <li> Settings </li> </a>
+				<a href="/logout"> <li> Logout </li> </a>
+			</ul>
+		</div>
 		<div class="container-1">
 			<header class="headerActivityPage-home">
 				<div class="header">
@@ -27,9 +36,9 @@
 							</a>
 						</div>
 						<div class="sideNavBar">
-							<a class="sideNavBar-a" href="">
-								<button class="dropbtn"> <i class="fas fa-bars"></i> </button>
-							</a>
+							<div class="sideNavBar-a" href="">
+								<button class="dropbtn" id="newSet-menu"> <i class="fas fa-bars"></i> </button>
+							</div>
 						</div>
 					</div>
 				</div>
