--- a/public/stylesheets/flashcardApp.css
+++ b/public/stylesheets/flashcardApp.css
@@ -42,6 +42,57 @@ body, html {
 	cursor: pointer;
 }
 
+.dropbtn-menu {
+	display: flex;
+	flex-direction: center;
+	align-items: center;
+	width: 0%;
+	height: 100vh;
+	position: fixed;
+	top: 0;
+	right: 0;
+	z-index: 15;
+	visibility: hidden;
+	opacity: 0;
+	background-color: #D6CCCC;
+	transition: 0.4s ease-in-out 0.1s;
+	transition-property: width;
+}
+
+.dropbtn-menu-show {
+	margin-top: 50px;
+	visibility: visible;
+	opacity: 1;
+	width: 40%;
+	height: 100vh;
+	transition: 0.4s ease-in-out 0.1s;
+	transition-property: width;
+}
+
+.dbtn-menu-list {
+	width: 100%;
+	height: 100vh;
+	text-align: center;
+	border: solid white 1px;
+	list-style-type: none;
+	padding: 0;
+	margin: 0;
+}
+
+.dbtn-menu-list a {
+	cursor: pointer;
+}
+
+.dbtn-menu-list li {
+	text-align: center;
+	color: white;
+	font-family: 'Dosis', 'Oswald';
+	font-size: 18px;
+	font-weight: bolder;
+	border: solid white 1px;
+	margin: 5px;
+}
+
 .newSets-navBar {
 	margin-right: 5px;
 }
@@ -89,8 +140,8 @@ body, html {
 }
 
 input:focus, textarea:focus {
-    outline: none; /** For Safari, etc **/
-    border:1px solid gray; /** For Firefox **/
+    /** outline: none; For Safari, etc **/
+    border: 1px solid white; /** For Firefox **/
 }
 
 input[type="text"].searchBar-Input::placeholder {
@@ -209,6 +260,7 @@ input[type="text"].newSetName-Input::placeholder {
 .Term-h3 {
 	font-size: 14px;
 	font-family: 'Dosis', sans-serif;
+	color: white;
 }
 
 .Definition {
@@ -227,6 +279,7 @@ input[type="text"].newSetName-Input::placeholder {
 .Definition-h3 {
 	font-size: 14px;
 	font-family: 'Dosis', sans-serif;
+	color: white;
 }
 
 .hidden {
@@ -238,13 +291,15 @@ input[type="text"].newSetName-Input::placeholder {
 	text-align: center;
 	width: 85%;
 	margin: 5px;
-	background-color: white;
+	background-color: transparent;
 	box-shadow: 0 4px 6px 0 hsla(0, 0%, 0%, 0.2);
+	border: solid white 1px;
 }
 
 .addCardButton {
 	padding: 5px;
-	background-color: white;
+	background-color: transparent;
+	color: white;
 	margin: 10px;
 	border: 0;
 	font-family: 'Dosis', sans-serif;
@@ -258,18 +313,20 @@ input[type="text"].newSetName-Input::placeholder {
 	margin: 20px 40px 20px 0;
 	padding: 5px;
 	border: 0;
-	background-color: white;
+	background-color: transparent;
+	border: solid white 1px;
 	box-shadow: 0 4px 6px 0 hsla(0, 0%, 0%, 0.2);
 	text-align: center;
 	margin-left: auto;
 }
 
 #sendButton {
-	font-family: 'Dosis', sans-serif;
+	font-family: 'Dosis', 'Montserrat', sans-serif;
 	padding: 10px;
-	font-size: 12px;
+	font-size: 14px;
 	text-align: center;
 	cursor: pointer;
+	color: white;
 }
 
 /*
@@ -396,6 +453,11 @@ input[type="text"].newSetName-Input::placeholder {
 
 .headerActivityPage-home-scroll {
 	background-color: #E00F47;
+	/* #D6CCCC */
+}
+
+.headerActivityPage-newSet-scroll {
+	background-color: #86ACDE;
 	/* #D6CCCC */
 }
 
