--- a/views/pages/flashcardAppCreateNewSet.ejs
+++ b/views/pages/flashcardAppCreateNewSet.ejs
@@ -14,7 +14,7 @@
 	<body>	
 		<div class="dropbtn-menu">
 			<ul class="dbtn-menu-list">
-				<a href="/flashHome"> <li> Your Sets </li> </a>
+				<a href="/profile"> <li> Your Sets </li> </a>
 				<a href=""> <li> Settings </li> </a>
 				<a href="/logout"> <li> Logout </li> </a>
 			</ul>
@@ -23,7 +23,7 @@
 			<header class="headerActivityPage-home">
 				<div class="header">
 					<div class="nameOfSite">
-						<a class="nameOfSite-a" href="/flashHome"> 
+						<a class="nameOfSite-a" href="/profile"> 
 							<h1 class="nameOfSite-h1"> FlashPass </h1>
 						</a>
 					</div>
