--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, user-scalable=1"/>
-	<title> Create New Set </title>
+	<title> FlashPass Home </title>
 	<link type="text/css" rel="stylesheet" href="/stylesheets/flashcardApp.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
 	<script src="exCard-home.js" async> </script> 
@@ -35,7 +35,7 @@
 					</div>
 				</div>
 			</header>
-			<img class="first-img" src="/images/IMG_0945.JPG" alt="Tam background with cargo ship"/>
+			<img class="first-img" src="/images/janko-ferlic-174927-unsplash.jpg" alt="Tam background with cargo ship"/>
 			<div class="home-img-div">
 				<h2 class="home-img-text">
 					Effortless UI design <br> granting learners a peaceful <br> approach to studying.
@@ -48,31 +48,32 @@
 			</div>	
 		</div>
 		<figure class="inner-container-1">
-			<img class="second-img" src="/images/IMG_0121.JPG" alt="SF Pink Flower"/> 
+			<img class="second-img" src="/images/joanna-kosinska-470407-unsplash.jpg" alt="SF Pink Flower"/> 
 			<div class="home-img-div-1">
-				<figcaption class="home-logOn-explain-div">
-					<h3 class="home-logOn-register">
-						Generate flashcard sets of your own accord <br> or discover heplful sets from others.
-					</h3>
-				<div class="home-img-separator">
-				</div>
-				</figcaption>
 				<figcaption class="home-logOn-explain-div-1">
 					<h3 class="home-logOn-explain-1">
 						Study new vocabulary, new ideas, or concepts.. 
 					</h3>
+					<div class="home-img-separator">
+					</div>
+				</figcaption>
+				<figcaption class="home-logOn-explain-div">
+					<h3 class="home-logOn-register">
+						Generate flashcard sets of your own accord <br> or discover heplful sets from others.
+					</h3>
+				
 				</figcaption>
 			</div> 
 		</figure>
 		<div class="inner-container-2">
 			<div class="home-logOn-div">
 				<h3 class="home-logOn-register">
-					 Imagine, create, practice.. <br> The potential is limitless. <br> Take learning into your own hands !
+					 Imagine, create, practice.. <br> The potential is limitless, <br> Take learning into your own hands.
 				</h3>
 			</div>
 			<div class="home-term-explain-div-1">
 				<h3 class="home-logOn-explain-1">
-					The build process of a new set is designed <br> to be navigated seamlessly. <br> Check out an example below !
+					The build process of a new set is designed <br> to be navigated seamlessly. <br> Check out an example below:
 				</h3>
 			</div>
 			<div class="home-img-separator">
@@ -123,11 +124,11 @@
 		</div>
 		<figure class="inner-container-3">
 			<div class="home-logOn-div-bottom">
-				<h3 class="home-logOn-register">
+				<h3 class="logOn-register-msg">
 					Sign up for a free account today !
 				</h3>
 			</div>
-			<img class="third-img" src="/images/IMG_3138.JPG" alt="SF Pink Flower"/>
+			<img class="third-img" src="/images/fabian-mardi-607722-unsplash.jpg" alt="SF Pink Flower"/>
 			<figcaption class="register-bar">
 				<form class="register-form" method="POST" action="/">
 					<input id="register-email" class="register-email" type="text" name="email" placeholder="Email" required data-value-missing="This field is required!" pattern="^([^\x00-\x20\x22\x28\x29\x2c\x2e\x3a-\x3c\x3e\x40\x5b-\x5d\x7f-\xff]+|\x22([^\x0d\x22\x5c\x80-\xff]|\x5c[\x00-\x7f])*\x22)(\x2e([^\x00-\x20\x22\x28\x29\x2c\x2e\x3a-\x3c\x3e\x40\x5b-\x5d\x7f-\xff]+|\x22([^\x0d\x22\x5c\x80-\xff]|\x5c[\x00-\x7f])*\x22))*\x40([^\x00-\x20\x22\x28\x29\x2c\x2e\x3a-\x3c\x3e\x40\x5b-\x5d\x7f-\xff]+|\x5b([^\x0d\x5b-\x5d\x80-\xff]|\x5c[\x00-\x7f])*\x5d)(\x2e([^\x00-\x20\x22\x28\x29\x2c\x2e\x3a-\x3c\x3e\x40\x5b-\x5d\x7f-\xff]+|\x5b([^\x0d\x5b-\x5d\x80-\xff]|\x5c[\x00-\x7f])*\x5d))*$" title="Email must include an @"/>
